--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CustomerRegistration"/>
+        <activity android:name=".CustomerRegistration" />
         <activity android:name=".ItemMenu" />
-        <activity android:name=".Cart"></activity>
+        <activity android:name=".Cart" />
+        <activity android:name=".EmployeeHome"></activity>
     </application>
 
 </manifest>
