--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Register"></activity>
+        <activity android:name=".OrderList"></activity>
+        <activity android:name=".Register" />
         <activity android:name=".SignUpHome" />
         <activity android:name=".MarketHome">
             <intent-filter>
