--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".getOrder"></activity>
+        <activity android:name=".getAddress"></activity>
+        <activity android:name=".getOrder" />
         <activity android:name=".profile" />
         <activity android:name=".home" />
         <activity android:name=".OrderList" />
