--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".home"></activity>
+        <activity android:name=".AdminLogin"></activity>
+        <activity android:name=".veg" />
+        <activity android:name=".DashBoard" />
+        <activity android:name=".home" />
         <activity android:name=".OrderList" />
         <activity android:name=".Register" />
         <activity android:name=".SignUpHome" />
