--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".deliverLogin"></activity>
+        <activity android:name=".OrderSuccess"></activity>
+        <activity android:name=".FillOrder" />
+        <activity android:name=".TakeOrder" />
+        <activity android:name=".deliverLogin" />
         <activity android:name=".getAddress" />
         <activity android:name=".getOrder" />
         <activity android:name=".profile" />
