--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.manujayapremathilaka.market">
 
-    <uses-permission android:name="android.permission.INTERNET "></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET " />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Veg"></activity>
+        <activity android:name=".Veg" />
         <activity android:name=".dashboard" />
         <activity android:name=".OrderSuccess" />
         <activity android:name=".FillOrder" />
